[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Unlicense"
authors = ["Tyson Lupul <tyson@radroots.org>"]
readme = "README.md"
repository = "https://github.com/triesap/ui-primitives"
rust-version = "1.92.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
leptos = { version = "0.8.5", default-features = false }
wasm-bindgen = "=0.2.100"
send_wrapper = "0.6"
web-sys = { version = "0.3.77", features = [
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "FocusEvent",
  "CssStyleDeclaration",
  "HtmlCollection",
  "HtmlElement",
  "KeyboardEvent",
  "MouseEvent",
  "Node",
  "PointerEvent",
  "Window"
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
