[package]
name = "headless-primitives-leptos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

description = "Leptos bindings for headless-primitives"
keywords = ["leptos", "ui", "headless", "a11y", "aria"]
categories = ["gui", "web-programming", "accessibility"]

[dependencies]
headless-primitives-core = { path = "../headless-primitives-core", version = "0.1.0" }
leptos = { workspace = true, features = ["csr"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
send_wrapper = { workspace = true }
web-sys = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
gloo-timers = { workspace = true }
wasm-bindgen-test = "=0.3.64"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
