[package]
name = "ui-primitives-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

description = "Headless UI primitives and accessibility helpers for Rust UI frameworks"
keywords = ["ui", "headless", "a11y", "aria", "state-machine"]
categories = ["gui", "accessibility"]

[dependencies]

[lints]
workspace = true
