[package]
name = "ui-primitives-leptos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

description = "Compatibility shim for the renamed headless-primitives-leptos crate"
keywords = ["leptos", "ui", "headless", "a11y", "aria"]
categories = ["gui", "web-programming", "accessibility"]

[dependencies]
headless-primitives-leptos = { path = "../headless-primitives-leptos", version = "0.1.0" }

[lints]
workspace = true
