[package]
name = "ui-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

description = "Compatibility shim for the renamed headless-primitives crate"
keywords = ["ui", "headless", "a11y", "aria", "accessibility"]
categories = ["gui", "accessibility"]

[features]
default = ["core"]
core = ["headless-primitives/core"]
leptos = ["headless-primitives/leptos"]

[dependencies]
headless-primitives = { path = "../headless-primitives", version = "0.1.0", default-features = false }

[lints]
workspace = true
