[package]
name = "web_ui_primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

description = "Headless primitives for Rust, with optional framework adapters"
keywords = ["ui", "headless", "a11y", "aria", "accessibility"]
categories = ["gui", "accessibility"]

[features]
default = ["core"]
core = ["dep:web_ui_primitives_core"]
leptos = ["dep:web_ui_primitives_leptos"]
csr = ["leptos", "web_ui_primitives_leptos/csr"]
hydrate = ["leptos", "web_ui_primitives_leptos/hydrate"]
ssr = ["leptos", "web_ui_primitives_leptos/ssr"]

[dependencies]
web_ui_primitives_core = { path = "../web_ui_primitives_core", version = "0.2.0", optional = true }
web_ui_primitives_leptos = { path = "../web_ui_primitives_leptos", version = "0.2.0", optional = true }

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
targets = ["x86_64-unknown-linux-gnu"]
no-default-features = true
features = ["core", "ssr"]

[lints]
workspace = true
