[package]
name = "web_ui_primitives_leptos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

description = "Leptos bindings for web_ui_primitives"
keywords = ["leptos", "ui", "headless", "a11y", "aria"]
categories = ["gui", "web-programming", "accessibility"]

[dependencies]
web_ui_primitives_core = { path = "../web_ui_primitives_core", version = "0.2.0" }
leptos = { workspace = true, features = ["csr"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
send_wrapper = { workspace = true }
web-sys = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
gloo-timers = { workspace = true }
wasm-bindgen-test = "=0.3.64"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
