[package]
name = "web_ui_primitives_leptos_render_modes_fixture"
version = "0.0.0"
edition = "2024"
publish = false

[features]
default = []
csr = ["leptos/csr", "web_ui_primitives/csr"]
hydrate = ["leptos/hydrate", "web_ui_primitives/hydrate"]
ssr = ["leptos/ssr", "web_ui_primitives/ssr"]

[dependencies]
hydration_context = "=0.3.1"
leptos = { version = "=0.9.0-alpha", default-features = false }
leptos_config = "=0.9.0-alpha"
leptos_dom = "=0.9.0-alpha"
leptos_hot_reload = "=0.9.0-alpha"
leptos_macro = "=0.9.0-alpha"
leptos_server = "=0.9.0-alpha"
reactive_graph = "=0.3.0-alpha"
reactive_stores = "=0.5.0-alpha"
server_fn = "=0.9.0-alpha"
tachys = "=0.3.0-alpha"
throw_error = "=0.3.1"
web_ui_primitives = { path = "../../..", default-features = false }

[workspace]
